--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ p {
 @media only screen and (max-width: 992px) {
     .parallax-container .section {
         position: absolute;
-        top: 40%;
     }
     #index-banner .section {
         top: 10%;
@@ -85,6 +84,10 @@ h5 {
 footer .row {
     margin: 10px 0;
     padding: 0px;
+}
+
+#index-banner .btn-large {
+    margin-top: -20px;
 }
 
 footer .material-icons {
