--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ footer .row {
     padding: 0px;
 }
 
-#index-banner .btn-large {
-    margin-top: -30px;
+#index-banner h5 {
+    margin: 30px 0px;
 }
 
 footer .material-icons {
